--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,9 @@
+
 #Set true color
 set-option -sa terminal-override ",xterm*:Tc"
+
+#Set mouse support
+set -g mouse on
 
 #Start windows and panes at 1, not 0
 set -g base-index 1
@@ -23,6 +27,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 #set vi-mode
 set-window-option -g mode-keys vi
